dataset1235/2025-2/1955397009/users/1691590287/executions/1107611404_775838323.log
== SUBMISSION (2025-08-21 13:21:37)
-- CODE: 
x1 = ("Ufam")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:21:56)
-- CODE: 
x1 = ("Ufam:")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam:
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:21:22)
-- CODE: 
x1 = input ("Ufam")
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam1
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
Ufam1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:26:05)
-- CODE: 
n1=5
n2=4
n3=3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:21:12)
-- CODE: 
X1 = input ("Ufam")
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x1)
          ^^
NameError: name 'x1' is not defined. Did you mean: 'X1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(x1)
          ^^
NameError: name 'x1' is not defined. Did you mean: 'X1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
